--- a/sonar_oculus/CMakeLists.txt
+++ b/sonar_oculus/CMakeLists.txt
@@ -1,54 +1,53 @@
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 2.8.3)
 project(sonar_oculus)
 
-if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  add_compile_options(-Wall -Wextra -Wpedantic)
-endif()
+add_compile_options(-std=c++11)
 
-find_package(ament_cmake REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(sensor_msgs REQUIRED)
-find_package(rosidl_default_generators REQUIRED)
-find_package(cv_bridge REQUIRED)
-find_package(OpenCV REQUIRED)
-find_package(sonar_oculus_interface REQUIRED)
-
-
-add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.cpp src/OculusClient.cpp)
-
-ament_target_dependencies(${PROJECT_NAME}
-  rclcpp
-  std_msgs
-  cv_bridge
-  sonar_oculus_interface
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
   sensor_msgs
-  OpenCV)
-
-target_include_directories(${PROJECT_NAME} PUBLIC
-  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-  $<INSTALL_INTERFACE:include>)
-
-
-install(TARGETS ${PROJECT_NAME}
-  DESTINATION lib/${PROJECT_NAME})
-
-install(PROGRAMS
-  scripts/oculus_viewer.py
-  DESTINATION lib/${PROJECT_NAME}
+  message_generation
+  dynamic_reconfigure
+  cv_bridge
 )
 
-install(DIRECTORY launch
-  DESTINATION share/${PROJECT_NAME})
+find_package( OpenCV REQUIRED)
 
-if(BUILD_TESTING)
-  find_package(ament_lint_auto REQUIRED)
-  # the following line skips the linter which checks for copyrights
-  # uncomment the line when a copyright and license is not present in all source files
-  #set(ament_cmake_copyright_FOUND TRUE)
-  # the following line skips cpplint (only works in a git repo)
-  # uncomment the line when this package is not in a git repo
-  #set(ament_cmake_cpplint_FOUND TRUE)
-  ament_lint_auto_find_test_dependencies()
-endif()
 
-ament_package()
+add_message_files(
+   FILES
+   OculusFire.msg
+   OculusPing.msg
+   OculusPingUncompressed.msg
+)
+
+generate_messages(
+   DEPENDENCIES
+   sensor_msgs
+)
+
+generate_dynamic_reconfigure_options(
+   cfg/OculusParams.cfg
+ )
+
+catkin_package(
+  CATKIN_DEPENDS roscpp sensor_msgs message_runtime
+)
+
+include_directories(
+  ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
+)
+
+add_executable(${PROJECT_NAME}_node src/sonar.cpp src/OculusClient.cpp)
+
+add_dependencies(${PROJECT_NAME}_node ${PROJECT_NAME}_gencfg)
+
+add_dependencies(${PROJECT_NAME}_node ${PROJECT_NAME}_generate_messages_cpp)
+
+target_link_libraries(${PROJECT_NAME}_node
+   ${catkin_LIBRARIES}
+   ${roslib_LIBRARIES}
+   ${OpenCV_LIBRARIES}
+
+)
