--- a/sonar_oculus_interface/package.xml
+++ b/sonar_oculus_interface/package.xml
@@ -3,9 +3,9 @@
 <package format="3">
   <name>sonar_oculus_interface</name>
   <version>0.1.0</version>
-  <description>The sonar_oculus package</description>
-  <license>Schlumberger retains all rights and privledges</license>
-  <maintainer email="bastian.schildknecht@gmail.com">Bastian Schildknecht</maintainer>
+  <description> sonar_oculus_interface package, containing ROS msg definition used by the sonar driver</description>
+  <license>Apache-2.0</license>
+  <maintainer email="puglisialessandro27@gmail.com">Alessandro Puglisi</maintainer>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
