--- a/sonar_oculus/package.xml
+++ b/sonar_oculus/package.xml
@@ -13,6 +13,7 @@
   <depend>std_msgs</depend>
   <depend>cv_bridge</depend>
   <depend>sensor_msgs</depend>
+  <depend>tf2_ros</depend>
   <depend>OpenCV</depend>
   <depend>sonar_oculus_interface</depend>
 
