feat:  csv intialization of sonar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.5)
+
+add_definitions(-DCONFIG_DIR_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/../config/\")
 
 project( sonar_driver )
 
@@ -8,7 +10,8 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 # Add the executable
 add_executable( sonar_driver 
                 sonar_driver.cpp 
-                OsClientCtrl.cpp 
+                OsClientCtrl.cpp
+                OsDriver.cpp
 )
 
 # Link required system libraries
