--- a/sonar_oculus/package.xml
+++ b/sonar_oculus/package.xml
@@ -4,8 +4,8 @@
   <name>sonar_oculus</name>
   <version>1.0.0</version>
   <description>The sonar_oculus package</description>
-  <license>Schlumberger retains all rights and privledges</license>
-  <maintainer email="bastian.schildknecht@gmail.com">Bastian Schildknecht</maintainer>
+  <license>Apache-2.0</license>
+  <maintainer email="puglisialessandro27@gmail.com">Puglisi Alessandro</maintainer>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   
