--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,57 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.8)
+project(sonar_driver_oculus)
 
-add_definitions(-DCONFIG_DIR_PATH=\"${CMAKE_CURRENT_SOURCE_DIR}/config/\")
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
-project( sonar_driver )
+find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(tf2_ros REQUIRED)
 
-find_package( OpenCV REQUIRED )
+add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.cpp src/OsClientCtrl.cpp src/OsDriver.cpp)
 
-# Include current directory for header files
-include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories( ${OpenCV_INCLUDE_DIRS} )
+ament_target_dependencies(${PROJECT_NAME}
+  rclcpp
+  std_msgs
+  cv_bridge
+  sonar_oculus_interface
+  sensor_msgs
+  tf2_ros
+  OpenCV)
 
-# Add the executable
-add_executable( sonar_driver 
-                sonar_driver.cpp 
-                OsClientCtrl.cpp
-                OsDriver.cpp
+target_include_directories(${PROJECT_NAME} PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>)
+
+
+install(TARGETS ${PROJECT_NAME}
+  DESTINATION lib/${PROJECT_NAME})
+
+install(PROGRAMS
+  scripts/oculus_viewer.py
+  DESTINATION lib/${PROJECT_NAME}
 )
 
-# Link required system libraries
-target_link_libraries(sonar_driver
-    pthread       # for std::thread and std::mutex
-    ${OpenCV_LIBS} 
-)
+install(DIRECTORY launch
+  DESTINATION share/${PROJECT_NAME})
+  
+install(DIRECTORY config
+  DESTINATION share/${PROJECT_NAME})
+
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  # the following line skips the linter which checks for copyrights
+  # uncomment the line when a copyright and license is not present in all source files
+  #set(ament_cmake_copyright_FOUND TRUE)
+  # the following line skips cpplint (only works in a git repo)
+  # uncomment the line when this package is not in a git repo
+  #set(ament_cmake_cpplint_FOUND TRUE)
+  ament_lint_auto_find_test_dependencies()
+endif()
+
+ament_package()
